--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,8 @@ navigation:
       url: /about
     - title: Contact
       url: /contact
+    - title: Portfolio
+      url: /portfolio
 
 social:
     github: joshirajaram
